tests/invalid/runtime/string_to_int_invalid.pts
function main() : void {
    string s = "abc";
    int x = s.toInt();
}
